Update TypeScript configuration and enhance UI components: Modify tsconfig.json to set module resolution and target to ES2022, and improve ConfirmModal and layout components for better accessibility and user experience. Implement user role checks in various admin pages and streamline authentication middleware for improved session management.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,15 @@
   "extends": "./.nuxt/tsconfig.json",
   "compilerOptions": {
     "module": "esnext",
+    "moduleResolution": "bundler",
+    "target": "ES2022",
+    "lib": ["ES2022", "DOM", "DOM.Iterable"],
+    "jsx": "preserve",
+    "types": ["vite/client"],
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
     "forceConsistentCasingInFileNames": true
   }
 }
+
