Refactor inventory management components and API: Remove InventoryMovementModal and MovementsHistoryModal components to streamline inventory management. Update API to disable POST requests for inventory movements, ensuring data integrity. Adjust TypeScript configuration to include strict template checks for improved type safety.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
     "strict": true,
     "noEmit": true,
     "forceConsistentCasingInFileNames": true
+  },
+  "vueCompilerOptions": {
+    "strictTemplates": false
   }
 }
 
