--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@pinia/nuxt": "^0.11.0",
     "@vercel/speed-insights": "^1.2.0",
     "chart.js": "^4.5.0",
+    "mercadopago": "^2.9.0",
     "nitropack": "^2.11.13",
     "nuxt": "^3.17.6",
     "pinia": "^3.0.2",
