--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
     "prepare": "nuxi prepare && node scripts/fix-nuxt-tsconfig.mjs"
   },
   "dependencies": {
+    "@iconify/utils": "^2.1.3",
     "@iconify/vue": "^5.0.0",
+    "@iconify-json/healthicons": "^1.2.8",
+    "@iconify-json/heroicons": "^1.2.2",
+    "@iconify-json/lucide": "^1.2.41",
+    "@iconify-json/svg-spinners": "^1.2.2",
     "@nuxt/kit": "^3.17.6",
     "@nuxt/schema": "^3.17.6",
     "@nuxt/ui": "^3.1.1",
@@ -30,10 +35,6 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@iconify-json/healthicons": "^1.2.8",
-    "@iconify-json/heroicons": "^1.2.2",
-    "@iconify-json/lucide": "^1.2.41",
-    "@iconify-json/svg-spinners": "^1.2.2",
     "@types/node": "^24.3.0",
     "typescript": "^5.9.2"
   }
