--- a/vercel.json
+++ b/vercel.json
@@ -2,5 +2,6 @@
   "buildCommand": "bun run build",
   "devCommand": "bun run dev",
   "installCommand": "bun install",
-  "framework": "nuxtjs"
+  "framework": "nuxtjs",
+  "outputDirectory": ".output"
 }
